--- a/src/public/styles/utilities/_variable.scss
+++ b/src/public/styles/utilities/_variable.scss
@@ -3,6 +3,7 @@ $text-color: #424242;
 $blue-light: #22a7f0;
 $whiteT: #f4f4f4;
 $white: #FFF;
+$whiteC: #CCC;
 $black: #000;
 $cyan: #00FFFF;
 $dark: #343a40;
@@ -28,6 +29,7 @@ $jellyBean: #2574a9;
 $whiteT: #f1f1f1;
 $whiteG: #f4f4f4;
 $gray: #cbcdcb;
+$grayD: #c1c6ad;
 $greyLynch: #6c7a89;
 $greyHoki: #67809f;
 $greenTee: #38D45B;
