--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -26,3 +26,9 @@
     </body>
 </html>
 
+<script type="text/javascript">
+   window.addEventListener("scroll", function(){
+       var navbar1 = document.getElementById("mainNav");
+       navbar1.classList.toggle("sticky", window.scrollY > 0);
+   })
+</script>
