--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -1,19 +1,90 @@
-<div class='footer'>
-    <center>
-        <div class='footer__main'>
-            <div class='license'>
-                <p> Made by LTL</p>
-                {{!-- <p><strong>Cơ quan chủ quản: Học viện Kỹ thuật Mật mã</strong><br
-                    />
-                    Giám đốc Học viện:TS. Nguyễn Hữu Hùng<br />
-                    Add: 141 đường Chiến Thắng, Tân Triều, Thanh Trì, Hà Nội<br
-                    />
-                    Tel: 024.38544244<br />
-                    Email: contact@actvn.edu.vn<br />
-                    Website: www.actvn.edu.vn
-                </p> --}}
+<!--footer starts from here-->
+<footer class='footer bg--lightEB'>
+    <div class='container bottom_border'>
+        <div class='row'>
+            <div class='col-sm-4 col-md col-sm-4 col-12 col'>
+                <h5 class='headin5_amrc col_white_amrc pt2'>Tuyển sinh đại học</h5>
+                <!--headin5_amrc-->
+                <ul class='footer_ul_amrc'>
+                    <li><a href='#'>Thông báo tuyển sinh</a></li>
+                    <li><a href='#'>Phương thức tuyển sinh</a></li>
+                    <li><a href='#'>Chỉ tiêu xét tuyển</a></li>
+                    <li><a href='#'>Hướng dẫn đăng ký</a></li>
+                    <li><a href='#'>Liên hệ - hỏi đáp</a></li>
+                </ul>
+
             </div>
-            <input type='hidden' id='txtRoot' value='http://ts.actvn.edu.vn' />
+
+            <div class='col-sm-4 col-md col-6 col'>
+                <h5 class='headin5_amrc col_white_amrc pt2'>Chuyên ngành đào tạo</h5>
+                <!--headin5_amrc-->
+                <ul class='footer_ul_amrc'>
+                    <li><a href='#'>Công nghệ thông tin</a></li>
+                    <li><a href='#'>An toàn thông tin</a></li>
+                    <li><a href='#'>Điện tử viễn thông</a></li>
+                </ul>
+                <!--footer_ul_amrc ends here-->
+            </div>
+
+            <div class='col-sm-4 col-md col-6 col'>
+                <h5 class='headin5_amrc col_white_amrc pt2'>Cơ quan chủ quản:
+                    Học viện Kỹ thuật mật mã</h5>
+                <!--headin5_amrc-->
+                <p>Giám đốc Học viện: TS. Nguyễn Hữu Hùng </p>
+                <p><i class='fa fa-location-arrow'></i>
+                    Address: 141 đường Chiến Thắng, Tân Triều, Thanh Trì, Hà Nội
+                </p>
+                <p><i class='fa fa-phone'></i> Tel: 024.38544244</p>
+                <p><i class='fa fa fa-envelope'></i>
+                    Email: contact@actvn.edu.vn
+                </p>
+                <p><i class='fa fa-globe'></i> Website: www.actvn.edu.vn </p>
+
+                <!--footer_ul_amrc ends here-->
+            </div>
+
         </div>
-    </center>
-</div>
+    </div>
+
+    <div class='container'>
+        <ul class='foote_bottom_ul_amrc'>
+            <li><a href='#'>Trang chủ</a></li>
+            <li><a href='#'>Tuyển sinh</a></li>
+            <li><a href='#'>Học phí</a></li>
+            <li><a href='#'>Học bổng</a></li>
+            <li><a href='#'>Tin tức</a></li>
+            <li><a href='#'>Liên hệ</a></li>
+        </ul>
+        <!--foote_bottom_ul_amrc ends here-->
+        <p class='text-center'>Copyright @2022 | Designed With by
+            <a href='#' class="kma-link">Học viện Kỹ thuật mật mã</a></p>
+
+        <ul class='social_footer_ul'>
+            <li><a class="footer-icon" href='#'><i class='fab fa-facebook-f'></i></a></li>
+            <li><a class="footer-icon" href='#'><i class='fab fa-twitter'></i></a></li>
+            <li><a class="footer-icon" href='#'><i class='fab fa-google-plus-g'></i></a></li>
+            <li><a class="footer-icon" href='#'><i class='fab fa-instagram'></i></a></li>
+            <li><a class="footer-icon" href='#'><i class='fab fa-youtube'></i></a></li>
+        </ul>
+        <!--social_footer_ul ends here-->
+    </div>
+
+</footer>
+
+<script
+    src='https://code.jquery.com/jquery-3.3.1.slim.min.js'
+    integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo'
+    crossorigin='anonymous'
+></script>
+<script
+    src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js'
+    integrity='sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49'
+    crossorigin='anonymous'
+></script>
+<script
+    src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'
+    integrity='sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy'
+    crossorigin='anonymous'
+></script>
+
+<!-- Crédit to https://bootsnipp.com/snippets/bxDBA -->
