--- a/src/resources/views/partials/slider.hbs
+++ b/src/resources/views/partials/slider.hbs
@@ -8,13 +8,13 @@
         </div>
         <div class='swiper-slide'>
             <img
-                src='http://ts.actvn.edu.vn/Upload/svda/treo-tuong-web-1.jpg'
+                src='https://i.imgur.com/RyxC4Yn.jpg'
                 alt=''
             />
         </div>
          <div class='swiper-slide'>
             <img
-                src='https://phunugioi.com/wp-content/uploads/2020/02/anh-phong-canh-hung-vy-nui-va-song.jpg'
+                src='https://i.imgur.com/oOS3RDm.jpg'
                 alt=''
             />
         </div>
