--- a/src/public/styles/layout/_footer.scss
+++ b/src/public/styles/layout/_footer.scss
@@ -1,39 +1,141 @@
 @import '../utilities/variable';
 
-
 footer {
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
+    // background-color: #263238;
+    min-height: 250px;
+    padding: 10px 0px 25px 0px;
+
+    .col_white_amrc {
+        color: $white;
+    }
+
+    .pt2 {
+        padding-top: 40px;
+        margin-bottom: 20px;
+    }
+
+    p {
+        font-size: 13px;
+        color: $whiteC;
+        padding-bottom: 0px;
+        margin-bottom: 8px;
+    }
     
-    button {
-        @include buttonStyle();;
+
+    .kma-link {
+        color: $greenTee;
+    }
+
+    .footer-icon {
+        color: $greenTee;
     }
 }
 
-.footer {
-    width: 100%;
+.mb10 {
+    padding-bottom: 15px;
+}
+
+.footer_ul_amrc {
+    margin: 0px;
+    list-style-type: none;
+    font-size: 14px;
+    padding: 0px 0px 10px 0px;
+
+    li {
+        padding: 0px 0px 5px 0px;
+
+        a {
+            color: #CCC;
+
+            &:hover {
+                color: #fff;
+                text-decoration: none;
+            }
+        }
+    }
+}
+
+.fleft {
     float: left;
-    height: 100 px;
-    background-color: $whiteT;
-    min-height: 125 px;
+}
 
-    .footer__main {
-        margin: 0 px;
-        padding: 0 px;
-        width: 980 px;
-        float: inherit;
-        text-align: center;
-        vertical-align: top;
+.padding-right {
+    padding-right: 10px;
+}
 
-        .license {
-            width: 440 px;
-            height: 100%;
-            margin: 10 px;
-            color: black;
-            padding-top: 16 px;
+.footer_ul2_amrc {
+    margin: 0px;
+    list-style-type: none;
+    padding: 0px;
+
+    li {
+        p {
+            display: table;
+        }
+
+        a:hover {
+            text-decoration: none;
+        }
+
+        i {
+            margin-top: 5px;
+        }
+    }
+
+}
+
+.bottom_border {
+    border-bottom: 1px solid #9279aa;
+    padding-bottom: 20px;
+}
+
+.foote_bottom_ul_amrc {
+    list-style-type: none;
+    padding: 0px;
+    display: table;
+    margin-top: 10px;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-left: auto;
+
+    li {
+        display: inline;
+
+        a {
+            color: $grayD;
+            margin: 0 12px;
+        }
+    }
+}
+
+.social_footer_ul {
+    display: table;
+    margin: 15px auto 0 auto;
+    list-style-type: none;
+
+    li {
+        padding-left: 20px;
+        padding-top: 10px;
+        float: left;
+
+        i {
+            width: 20px;
+            height: 20px;
             text-align: center;
         }
     }
+}
+
+.social_footer_ul .social_footer_ul li a {
+    color: #CCC;
+    border: 1px solid #CCC;
+    padding: 8px;
+    border-radius: 50%;
+}
+
+.social_footer_ul li i {
+    width: 20px;
+    height: 20px;
+    text-align: center;
 }
