--- a/src/public/styles/utilities/_variable.scss
+++ b/src/public/styles/utilities/_variable.scss
@@ -29,11 +29,13 @@ $jellyBean: #2574a9;
 $whiteT: #f1f1f1;
 $whiteG: #f4f4f4;
 $gray: #cbcdcb;
+$grayDaz: #b8c0b8;
 $grayD: #c1c6ad;
 $greyLynch: #6c7a89;
 $greyHoki: #67809f;
 $greenTee: #38D45B;
 $yellowT: #eaff00;
+$yellowGon: #daeb16;
 $red: #f03434;
 $redM: #966565;
 $pomegranate: #f03434;
