--- a/src/resources/views/partials/footer.hbs
+++ b/src/resources/views/partials/footer.hbs
@@ -8,7 +8,7 @@
                 <ul class='footer_ul_amrc'>
                     <li><a href='#'>Thông báo tuyển sinh</a></li>
                     <li><a href='#'>Phương thức tuyển sinh</a></li>
-                    <li><a href='#'>Chỉ tiêu xét tuyển</a></li>
+                    <li><a href='#'>Chỉ tiêu xét tuy</a></li>
                     <li><a href='#'>Hướng dẫn đăng ký</a></li>
                     <li><a href='#'>Liên hệ - hỏi đáp</a></li>
                 </ul>
